# opengl-haven

./: .gitignore  CMakeLists.txt  README.md  run_compile.sh  run_model_compile.sh  setup.sh  setup_linux.sh
include/glad/: glad.h
src/: glad.c  main.cpp  passing_shader_colour_data.example.cpp  triangle.cpp  uniform_and_glfwGetTime_animation.example.cpp
src/3d/: README.md  floor_example.cpp  multi_cube.cpp  rotating_camera_example.cpp  rotating_cube.cpp
src/examples/3d_examples/: advanced_camera.cpp  joystick.cpp  main.cpp  rotating_camera_example.cpp  triforce.cpp
src/examples/basic_3d/: README.md  basic_camera.cpp  floor_example.cpp  joystick.cpp  main.cpp  multi_cube.cpp  rotating_cube.cpp  triforce.cpp
src/examples/basic_shaders/: triangle.example.cpp  two_colour_triangles_different_shaders.example.cpp  two_triangles_2_vbos.example.cpp  two_vertex_attributes_interpolated_multicolour_triangle.example.cpp  uniform_and_glfwGetTime_animation.example.cpp
src/examples/basic_transformations/: transformation.cpp  vector_multiplication.cpp
src/examples/instancing/: README.md  triforce.cpp
src/examples/lighting/: .lighting_cube_0.cpp.swp  lighting_cube_0.cpp  lighting_cube_1.cpp  lighting_cube_2.cpp  lighting_cube_3.cpp  lighting_cube_4.cpp  lighting_cube_5.cpp  lighting_cube_6.cpp  lighting_notes.md  lighting_triangle_trio_0.cpp
src/examples/models/: main.cpp  mesh_1.cpp  mesh_notes.cpp  prs_guitar.cpp  survival_backpack.cpp
src/examples/shader_examples/: square_wf.example.cpp
src/examples/terrain/: terrain_0.cpp  terrain_1.cpp
src/examples/texture_examples/: overlapping_texture_rect_movement_no_transformation.cpp  two_overlapping_texture_rect.cpp
src/examples/textures/: overlapping_texture_rect_movement_no_transformation.cpp  two_overlapping_texture_rect.cpp
src/shader_class_example/: shader.h  shader_class.example.cpp
src/shader_class_example/shaders/: shader.fs
src/texture_examples/: texture_rect.cpp
src/transformation_examples/: transformation.cpp  vector_multiplication.cpp
(+27 files in other folders)
